fix item stretching in table

--- a/components/CardSearcher/SearchArea/SearchTable/Styles/Table.module.scss
+++ b/components/CardSearcher/SearchArea/SearchTable/Styles/Table.module.scss
@@ -8,11 +8,9 @@
   position: absolute;
   top: 0;
   left: 0;
-  
   width:100%;
-  height:100%;
+  height: auto;
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
-  align-items: stretch;
 }
